feat: 移除耐力默认3.8的恢复量。